category added to yaml, validation for names, mvnw-s moved
